#
# Updated to non-recursive build and new directory structure Sept. 2022. -- JasonC
#


ACLOCAL_AMFLAGS = -I m4
dist_man1_MANS = doc/strutplot.1 doc/ridgerunner.1

# We include a copy of the knotplot distribution of loose knots for testing.

dist_pkgdata_DATA = data/0.1.vect data/0.2.1.vect data/0.3.1.vect data/0.4.1.vect data/10.1.vect  \
	data/10.10.vect data/10.100.vect data/10.101.vect data/10.102.vect data/10.103.vect  \
	data/10.104.vect data/10.105.vect data/10.106.vect data/10.107.vect data/10.108.vect  \
	data/10.109.vect data/10.11.vect data/10.110.vect data/10.111.vect data/10.112.vect  \
	data/10.113.vect data/10.114.vect data/10.115.vect data/10.116.vect data/10.117.vect  \
	data/10.118.vect data/10.119.vect data/10.12.vect data/10.120.vect data/10.121.vect  \
	data/10.122.vect data/10.123.vect data/10.124.vect data/10.125.vect data/10.126.vect  \
	data/10.127.vect data/10.128.vect data/10.129.vect data/10.13.vect data/10.130.vect  \
	data/10.131.vect data/10.132.vect data/10.133.vect data/10.134.vect data/10.135.vect  \
	data/10.136.vect data/10.137.vect data/10.138.vect data/10.139.vect data/10.14.vect  \
	data/10.140.vect data/10.141.vect data/10.142.vect data/10.143.vect data/10.144.vect  \
	data/10.145.vect data/10.146.vect data/10.147.vect data/10.148.vect data/10.149.vect  \
	data/10.15.vect data/10.150.vect data/10.151.vect data/10.152.vect data/10.153.vect  \
	data/10.154.vect data/10.155.vect data/10.156.vect data/10.157.vect data/10.158.vect  \
	data/10.159.vect data/10.16.vect data/10.160.vect data/10.161.vect data/10.162.vect  \
	data/10.163.vect data/10.164.vect data/10.165.vect data/10.166.vect data/10.17.vect  \
	data/10.18.vect data/10.19.vect data/10.2.vect data/10.20.vect data/10.21.vect  \
	data/10.22.vect data/10.23.vect data/10.24.vect data/10.25.vect data/10.26.vect  \
	data/10.27.vect data/10.28.vect data/10.29.vect data/10.3.vect data/10.30.vect  \
	data/10.31.vect data/10.32.vect data/10.33.vect data/10.34.vect data/10.35.vect  \
	data/10.36.vect data/10.37.vect data/10.38.vect data/10.39.vect data/10.4.vect  \
	data/10.40.vect data/10.41.vect data/10.42.vect data/10.43.vect data/10.44.vect  \
	data/10.45.vect data/10.46.vect data/10.47.vect data/10.48.vect data/10.49.vect  \
	data/10.5.vect data/10.50.vect data/10.51.vect data/10.52.vect data/10.53.vect  \
	data/10.54.vect data/10.55.vect data/10.56.vect data/10.57.vect data/10.58.vect  \
	data/10.59.vect data/10.6.vect data/10.60.vect data/10.61.vect data/10.62.vect  \
	data/10.63.vect data/10.64.vect data/10.65.vect data/10.66.vect data/10.67.vect  \
	data/10.68.vect data/10.69.vect data/10.7.vect data/10.70.vect data/10.71.vect  \
	data/10.72.vect data/10.73.vect data/10.74.vect data/10.75.vect data/10.76.vect  \
	data/10.77.vect data/10.78.vect data/10.79.vect data/10.8.vect data/10.80.vect  \
	data/10.81.vect data/10.82.vect data/10.83.vect data/10.84.vect data/10.85.vect  \
	data/10.86.vect data/10.87.vect data/10.88.vect data/10.89.vect data/10.9.vect  \
	data/10.90.vect data/10.91.vect data/10.92.vect data/10.93.vect data/10.94.vect  \
	data/10.95.vect data/10.96.vect data/10.97.vect data/10.98.vect data/10.99.vect  \
	data/2.2.1.vect data/3.1.vect data/4.1.vect data/4.2.1.vect data/5.1.vect  \
	data/5.2.1.vect data/5.2.vect data/6.1.vect data/6.2.1.vect data/6.2.2.vect  \
	data/6.2.3.vect data/6.2.vect data/6.3.1.vect data/6.3.2.vect data/6.3.3.vect  \
	data/6.3.vect data/7.1.vect data/7.2.1.vect data/7.2.2.vect data/7.2.3.vect  \
	data/7.2.4.vect data/7.2.5.vect data/7.2.6.vect data/7.2.7.vect data/7.2.8.vect  \
	data/7.2.vect data/7.3.1.vect data/7.3.vect data/7.4.vect data/7.5.vect  \
	data/7.6.vect data/7.7.vect data/8.1.vect data/8.10.vect data/8.11.vect  \
	data/8.12.vect data/8.13.vect data/8.14.vect data/8.15.vect data/8.16.vect  \
	data/8.17.vect data/8.18.vect data/8.19.vect data/8.2.1.vect data/8.2.10.vect  \
	data/8.2.11.vect data/8.2.12.vect data/8.2.13.vect data/8.2.14.vect data/8.2.15.vect  \
	data/8.2.16.vect data/8.2.2.vect data/8.2.3.vect data/8.2.4.vect data/8.2.5.vect  \
	data/8.2.6.vect data/8.2.7.vect data/8.2.8.vect data/8.2.9.vect data/8.2.vect  \
	data/8.20.vect data/8.21.vect data/8.3.1.vect data/8.3.10.vect data/8.3.2.vect  \
	data/8.3.3.vect data/8.3.4.vect data/8.3.5.vect data/8.3.6.vect data/8.3.7.vect  \
	data/8.3.8.vect data/8.3.9.vect data/8.3.vect data/8.4.1.vect data/8.4.2.vect  \
	data/8.4.3.vect data/8.4.vect data/8.5.vect data/8.6.vect data/8.7.vect  \
	data/8.8.vect data/8.9.vect data/9.1.vect data/9.10.vect data/9.11.vect  \
	data/9.12.vect data/9.13.vect data/9.14.vect data/9.15.vect data/9.16.vect  \
	data/9.17.vect data/9.18.vect data/9.19.vect data/9.2.1.vect data/9.2.10.vect  \
	data/9.2.11.vect data/9.2.12.vect data/9.2.13.vect data/9.2.14.vect data/9.2.15.vect  \
	data/9.2.16.vect data/9.2.17.vect data/9.2.18.vect data/9.2.19.vect data/9.2.2.vect  \
	data/9.2.20.vect data/9.2.21.vect data/9.2.22.vect data/9.2.23.vect data/9.2.24.vect  \
	data/9.2.25.vect data/9.2.26.vect data/9.2.27.vect data/9.2.28.vect data/9.2.29.vect  \
	data/9.2.3.vect data/9.2.30.vect data/9.2.31.vect data/9.2.32.vect data/9.2.33.vect  \
	data/9.2.34.vect data/9.2.35.vect data/9.2.36.vect data/9.2.37.vect data/9.2.38.vect  \
	data/9.2.39.vect data/9.2.4.vect data/9.2.40.vect data/9.2.41.vect data/9.2.42.vect  \
	data/9.2.43.vect data/9.2.44.vect data/9.2.45.vect data/9.2.46.vect data/9.2.47.vect  \
	data/9.2.48.vect data/9.2.49.vect data/9.2.5.vect data/9.2.50.vect data/9.2.51.vect  \
	data/9.2.52.vect data/9.2.53.vect data/9.2.54.vect data/9.2.55.vect data/9.2.56.vect  \
	data/9.2.57.vect data/9.2.58.vect data/9.2.59.vect data/9.2.6.vect data/9.2.60.vect  \
	data/9.2.61.vect data/9.2.7.vect data/9.2.8.vect data/9.2.9.vect data/9.2.vect  \
	data/9.20.vect data/9.21.vect data/9.22.vect data/9.23.vect data/9.24.vect  \
	data/9.25.vect data/9.26.vect data/9.27.vect data/9.28.vect data/9.29.vect  \
	data/9.3.1.vect data/9.3.10.vect data/9.3.11.vect data/9.3.12.vect data/9.3.13.vect  \
	data/9.3.14.vect data/9.3.15.vect data/9.3.16.vect data/9.3.17.vect data/9.3.18.vect  \
	data/9.3.19.vect data/9.3.2.vect data/9.3.20.vect data/9.3.21.vect data/9.3.3.vect  \
	data/9.3.4.vect data/9.3.5.vect data/9.3.6.vect data/9.3.7.vect data/9.3.8.vect  \
	data/9.3.9.vect data/9.3.vect data/9.30.vect data/9.31.vect data/9.32.vect  \
	data/9.33.vect data/9.34.vect data/9.35.vect data/9.36.vect data/9.37.vect  \
	data/9.38.vect data/9.39.vect data/9.4.1.vect data/9.4.vect data/9.40.vect  \
	data/9.41.vect data/9.42.vect data/9.43.vect data/9.44.vect data/9.45.vect  \
	data/9.46.vect data/9.47.vect data/9.48.vect data/9.49.vect data/9.5.vect \
	data/sticktrefoil.vect  

AM_CFLAGS = -g -finline-functions -Wall

bin_PROGRAMS = ridgerunner strutplot residual 

ridgerunner_SOURCES = src/errors.c \
	src/dlen.c \
	src/linklib_additions.c \
	src/settings.c \
	src/ridgerunner_main.c \
        src/stepper.c \
	src/dlen.h \
	src/errors.h \
	src/display.c \
	src/ridgerunner.h \
	src/portability.h \
	src/free_edge.c \
	src/globals.c 

strutplot_SOURCES = tools/strutplot.c \
	src/free_edge.c \
	src/globals.c \
	src/ordie.c 

TESTS = csteptest mrgradtest strutgradtest rownumcvctest

check_PROGRAMS = csteptest mrgradtest lookahead strutgradtest rownumcvctest

lookahead_SOURCES =  src/errors.c \
	src/dlen.c \
	src/linklib_additions.c \
	src/settings.c \
        src/stepper.c \
	src/dlen.h \
	src/errors.h \
	src/display.c \
	src/ridgerunner.h \
	src/portability.h \
	src/free_edge.c \
	src/globals.c \
	src/mangle.h \
	src/mangle.c \
	tools/lookahead.c 

csteptest_SOURCES = src/errors.c \
	src/dlen.c \
	src/linklib_additions.c \
	src/settings.c \
        src/stepper.c \
	src/dlen.h \
	src/errors.h \
	src/display.c \
	src/ridgerunner.h \
	src/portability.h \
	src/free_edge.c \
	src/globals.c \
	src/mangle.h \
	src/mangle.c \
	test/csteptest.c 

mrgradtest_SOURCES =  src/errors.c \
	src/dlen.c \
	src/linklib_additions.c \
	src/settings.c \
        src/stepper.c \
	src/dlen.h \
	src/errors.h \
	src/display.c \
	src/ridgerunner.h \
	src/portability.h \
	src/free_edge.c \
	src/globals.c \
	src/mangle.h \
	src/mangle.c \
	test/mrgradtest.c 

strutgradtest_SOURCES =  src/errors.c \
	src/dlen.c \
	src/linklib_additions.c \
	src/settings.c \
	src/stepper.c \
	src/dlen.h \
	src/errors.h \
	src/display.c \
	src/ridgerunner.h \
	src/portability.h \
	src/free_edge.c \
	src/globals.c \
	src/mangle.h \
	src/mangle.c \
	test/strutgradtest.c 

rownumcvctest_SOURCES = src/errors.c \
	src/dlen.c \
	src/linklib_additions.c \
	src/settings.c \
	src/stepper.c \
	src/dlen.h \
	src/errors.h \
	src/display.c \
	src/ridgerunner.h \
	src/portability.h \
	src/free_edge.c \
	src/globals.c \
	src/mangle.h \
	src/mangle.c \
	test/rownumcvctest.c 

residual_SOURCES =  src/errors.c \
	src/dlen.c \
	src/linklib_additions.c \
	src/settings.c \
	src/stepper.c \
	src/dlen.h \
	src/errors.h \
	src/display.c \
	src/ridgerunner.h \
	src/portability.h \
	src/free_edge.c \
	src/globals.c \
	src/mangle.h \
	src/mangle.c \
	tools/residual.c 
